# QML_3DTemplate

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp
filesystem/balsamui/: Profile_8080.qml  defaultobject_mesh.mesh
filesystem/balsamui/OpenSCAD/: profile_8080.scad  profile_8080.stl
filesystem/balsamui/meshes/: node3.mesh
modules/FileIO/: CMakeLists.txt  FileIO.cpp  FileIO.hpp
